# cicd-cli

./: .gitignore  README.md  cli.py  pyproject.toml
.serena/: project.yml
cicd/: cli.py  config.py  gitlab_client.py  i18n.py
cicd/lang/: cs.json  de.json  en.json  es.json  fr.json  nl.json  pl.json
