[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitlab-cicd-cli"
version = "1.0.0"
description = "CLI do monitorowania CI/CD na self-hosted GitLab"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "rich>=13.0",
]

[project.scripts]
cicd = "cicd.cli:main"

[tool.setuptools.packages.find]
include = ["cicd*"]

[tool.setuptools.package-data]
cicd = ["lang/*.json"]
